2008-06-11  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-actor.c: Notify :x, :y, :width and :height
	properties using ClutterUnits, not pixels.

2008-06-11  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/eglnative/clutter-stage-egl.c: Update the EGL native
	backend to use the new size negotiation API.

2008-06-11  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/sdl/clutter-stage-sdl.c: Update the SDL backend to
	use the new size negotiation API.

2008-06-11  Emmanuele Bassi  <ebassi@openedhand.com>

	Bug #961 - Fails to build on OSX

	* clutter/osx/clutter-stage-osx.c: Update the OSX backend to
	use the new size negotiation API.

2008-06-11  Emmanuele Bassi  <ebassi@openedhand.com>

	* autogen.sh: Force overwriting when glib-gettextize is
	invoked by autogen.sh.

2008-06-10  Neil Roberts  <neil@o-hand.com>

	* clutter/clutter-main.c: Include <locale.h> for setlocale()

2008-06-10  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-child-meta.c: Fix section name

	* clutter/clutter-container.c:
	(clutter_container_child_set_property),
	(clutter_container_child_get_property): Fix gtk-doc parameter
	name.

	* clutter/clutter-container.h: Fix documentation of the
	interface vfuncs.

	* clutter/clutter-event.h: Fix documentation.

	* clutter/clutter-feature.h: Fix documentation.

	* clutter/clutter-types.h: Add ClutterRequestMode.

	* clutter/x11/clutter-event-x11.c: Fix documentation.

	* tests/test-fullscreen.c: Verify that the stage size has been
	changed by clutter_stage_fullscreen().

2008-06-10  Emmanuele Bassi  <ebassi@openedhand.com>

	Bug #815 - Split up request, allocation, and paint box

	* clutter/clutter-actor.[ch]: Rework the size allocation,
	request and paint area. Now ::request_coords() is called
	::allocate(), and ::query_coords() has been split into
	::get_preferred_width() and ::get_preferred_height(). See
	the documentation and the layout test on how to implement