@@ -1,5 +1,11 @@
 2008-06-11  Emmanuele Bassi  <ebassi@openedhand.com>
 
+	* clutter/clutter-label.c (clutter_label_allocate): Keep the
+	layout if the size of the allocation is the same as the last
+	allocation received by the label.
+
+2008-06-11  Emmanuele Bassi  <ebassi@openedhand.com>
+
 	* clutter/clutter-actor.c: Notify :x, :y, :width and :height
 	properties using ClutterUnits, not pixels.
 
